finalized ClientController and ProfileController