@@ -3,50 +3,82 @@ package com.onidza.hibernatecore.service;
 
 import com.onidza.hibernatecore.model.dto.ClientDTO;
 import com.onidza.hibernatecore.model.entity.Client;
-import com.onidza.hibernatecore.model.mapper.ClientMapper;
+import com.onidza.hibernatecore.model.entity.Profile;
+import com.onidza.hibernatecore.model.mapper.MapperService;
 import com.onidza.hibernatecore.repository.ClientRepository;
+import com.onidza.hibernatecore.repository.ProfileRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ClientService {
 
     private final ClientRepository clientRepository;
-//    private final ClientMapper clientMapper;
+    private final ProfileRepository profileRepository;
+    private final MapperService mapperService;
 
     public ClientDTO getClientById(Long id) {
-        Client client = clientRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Client not found"));
-        return clientMapper.toDTO(client);
+        return mapperService
+                .clientToDTO(clientRepository.findById(id)
+                        .orElseThrow(()
+                                -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Client not found")));
     }
 
     public List<ClientDTO> getAllClients() {
         return clientRepository
                 .findAll()
                 .stream()
-                .map(clientMapper::toDTO)
-                .toList();
+                .map(mapperService::clientToDTO)
+                .collect(Collectors.toList());
     }
 
-    public Client addClient(ClientDTO clientDTO) {
-        return clientRepository
-                .save(clientMapper.toEntity(clientDTO));
+    public ClientDTO addClient(ClientDTO clientDTO) {
+        Client client = clientRepository
+                .save(mapperService.clientDTOToEntity(clientDTO));
+
+        if (client.getProfile() != null) {
+            client.getProfile().setClient(client);
+            profileRepository.save(client.getProfile());
+        }
+        return mapperService.clientToDTO(client);
     }
 
-    public Client updateClient(Long id, ClientDTO updated) {
-        Client existing = clientRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Client not found"));
-        Client client = clientMapper.toEntity(updated);
-        existing.setName(client.getName());
-        existing.setEmail(client.getEmail());
-        existing.setProfile(client.getProfile());
-        return clientRepository.save(existing);
+    public ClientDTO updateClient(Long id, ClientDTO updated) {
+        Client existing = clientRepository
+                .findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Client not found"));
+
+        existing.setName(updated.name());
+        existing.setEmail(updated.email());
+
+        Profile existingProfile = existing.getProfile();
+        if (existing.getProfile() != null && updated.profile() != null) {
+            existingProfile.setAddress(updated.profile().address());
+            existingProfile.setPhone(updated.profile().phone());
+        }
+
+        if (updated.coupons() != null) {
+            existing.getCoupons().clear();
+            existing.setCoupons(updated.coupons()
+                    .stream()
+                    .map(mapperService::couponDTOToEntity)
+                    .peek(coupon -> coupon.getClients().add(existing))
+                    .collect(Collectors.toList())
+            );
+        }
+
+        Client saved = clientRepository.save(existing);
+        return mapperService.clientToDTO(saved);
     }
 
-    public void deleteClient(Long id) {
+    public void deleteClient(@PathVariable Long id) {
         clientRepository.deleteById(id);
     }
 }
